--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
 
+    <!-- Header section -->
+    <header class="header container">
+        <nav class="header__navbar">
+            <a href="/"><img src="images/efood-logo.svg" alt="efood-logo" height="38"></a>
+
+            <ul>
+                <li><a href="" class="header__link">Home</a></li>
+                <li><a href="" class="header__link">Service</a></li>
+                <li><a href="" class="header__link">Top cities</a></li>
+                <li><a href="" class="header__link">Contact</a></li>
+                <li><img src="images/search-1.png" alt="search-1"></li>
+                <li><img src="images/buy.png" alt="buy"></li>
+                <li><a href="#" class="sign-up">Sign Up</a></li>
+            </ul>
+            
+        </nav>
+    </header>
     
 </body>
 </html>
