navbar qismi to'liq moslashuvchan - ya'ni barcha qurilmalarda bir xil chiroyli ko'rinishga ega bo'ldi

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header section -->
     <header class="header container">
         <nav class="header__navbar flex items-center between">
-            <a href="/"><img src="images/efood-logo.svg" alt="efood-logo" height="38"></a>
+            <a href="/"><img src="images/efood-logo.svg" alt="efood-logo" class="logo"></a>
 
             <ul class="header__menu flex items-center">
                 <li><a href="" class="header__link active">Home</a></li>
